# nylon

./: Cargo.toml  Docs.md  INSTALL_GUIDE.md  Makefile  README.md
.github/workflows/: Ci.yml
c/: nylon.h
crates/nylon/: Cargo.toml
crates/nylon-command/: Cargo.toml
crates/nylon-command/src/: handler.rs  lib.rs  service.rs
crates/nylon-config/: Cargo.toml
crates/nylon-config/src/: lib.rs  plugins.rs  proxy.rs  runtime.rs  services.rs  utils.rs
crates/nylon-error/: Cargo.toml
crates/nylon-error/src/: lib.rs
crates/nylon-messaging/: Cargo.toml
crates/nylon-messaging/src/: error.rs  lib.rs  nats_client.rs  protocol.rs  transport.rs
crates/nylon-plugin/: Cargo.toml
crates/nylon-plugin/src/: cache.rs  constants.rs  dispatcher.rs  ffi_transport.rs  lib.rs  loaders.rs  messaging.rs  messaging_methods.rs  plugin_manager.rs  session_handler.rs  stream.rs  transport_handler.rs  types.rs
crates/nylon-plugin/src/native/: header_modifier.rs  mod.rs
crates/nylon-store/: Cargo.toml
crates/nylon-store/src/: http_discovery.rs  lb_backends.rs  lib.rs  redis_adapter.rs  routes.rs  tls.rs  websocket_adapter.rs  websockets.rs
crates/nylon-tls/: Cargo.toml
crates/nylon-tls/src/: acme.rs  certificate.rs  lib.rs  metrics.rs
crates/nylon-types/: Cargo.toml
crates/nylon-types/src/: context.rs  lib.rs  plugins.rs  proxy.rs  route.rs  services.rs  template.rs  tls.rs  transport.rs  websocket.rs
crates/nylon/src/: backend.rs  background_service.rs  context.rs  core.rs  dynamic_certificate.rs  main.rs  proxy.rs  response.rs  runtime.rs
crates/nylon/tests/: README.md  integration.rs
crates/nylon/tests/integration/: nats_basic_test.rs  read_methods_test.rs  test_helpers.rs
docs/: NATS_PLUGIN_CONFIG.md  NATS_PLUGIN_QUICKSTART.md  NATS_PLUGIN_QUICK_START.md  NATS_PLUGIN_ROADMAP.md  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY_TH.md  PLUGIN_COMMUNICATION_ANALYSIS.md  PLUGIN_OPTIMIZATION_GUIDE_TH.md  README.md  WEBSOCKET_NATS_DESIGN.md  index.md  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/api/: configuration.md  go-sdk.md
docs/core/: configuration.md  load-balancing.md  middleware.md  routing.md  tls.md
docs/examples/: authentication.md  basic-proxy.md  custom-headers.md  rate-limiting.md  websocket.md
docs/introduction/: installation.md  quick-start.md  what-is-nylon.md
docs/plugins/: go-sdk.md  overview.md  phases.md  request.md  response.md  websocket.md
examples/: config.yaml
examples/cert/: localhost.crt  localhost.key
examples/go/: go.mod  main.go  middleware.go  service.go  utils.go
examples/go-nats/: go.mod  main.go
examples/proxy/: README.md  base.yaml  host_route.yaml  nats.yaml  route1.yaml  tls.yaml
examples/static/: index.html
proto/: dispatcher.fbs  http_context.fbs  plugin.fbs
scripts/: benchmark_plugin.sh  install.sh
sdk/go/: go.mod  go.sum
sdk/go/fbs/nylon_dispatcher/: NylonDispatcher.go
sdk/go/fbs/nylon_http_context/: Header.go  KeyValue.go  NylonHttpContext.go  NylonHttpRequest.go  NylonHttpResponse.go
sdk/go/fbs/nylon_plugin/: HeaderKeyValue.go  NylonHttpHeaders.go  RemoveResponseHeader.go
sdk/go/sdk/: constants.go  dispatcher.go  http_context.go  http_context_optimized.go  logging.go  plugin.go  plugin_nats.go  pool.go  request.go  request_filter.go  response.go  response_body_filter.go  response_filter.go  sdk.go  types.go  worker_pool.go
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs  proxy_http.rs
sdk/rust/src/fbs/: dispatcher_generated.rs  http_context_generated.rs  mod.rs  plugin_generated.rs
tests/: README.md
tests/integration/: mod.rs  nats_plugin_test.rs  response_filter_test.rs  retry_logic_test.rs
