[workspace]
resolver = "3"

members = [
  "crates/*", "sdk/rust",
]

[workspace.dependencies]
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = "0.3"
tracing = "0.1"
serde_yml = "0.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.0"
dashmap = "6.1.0"
once_cell = "1.20"
pingora = { version="0.5", features = ["lb", "openssl"] }
async-trait = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["rt"] }
fnv = "1.0"
matchit = "0.8"
bytes = "1.7"
http = "1.3"
regex = "1.11"
chrono = "0.4"
uuid = { version = "1.13", features = ["v4", "v7"] }
flatbuffers = { version = "25.2", features = ["serde"] }
libloading = "0.8"

[profile.release]
overflow-checks = true
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
