[workspace]
resolver = "3"

members = [
  "crates/*", "sdk/rust",
]

[workspace.dependencies]
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = "0.3"
tracing = "0.1"
serde_yaml_ng = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.0"
dashmap = "6.1.0"
once_cell = "1.20"
pingora = { version="0.6", features = ["lb", "openssl"] }
async-trait = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["rt"] }
tokio-stream = "0.1"
fnv = "1.0"
matchit = "0.8"
bytes = "1.7"
http = "1.3"
regex = "1.11"
chrono = "0.4"
uuid = { version = "1.13", features = ["v4", "v7"] }
flatbuffers = { version = "25.9", features = ["serde"] }
libloading = "0.8.9"
instant-acme = "0.8"
sha1 = "0.10"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
mime_guess = "2.0"
rcgen = "0.14"

[profile.release]
overflow-checks = true
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
