[package]
name = "nylon-config"
version = "0.1.0"
edition = "2024"

[dependencies]
nylon-error = { path = "../nylon-error" }
nylon-store = { path = "../nylon-store" }
nylon-types = { path = "../nylon-types" }
nylon-plugin = { path = "../nylon-plugin" }
serde_yaml_ng = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num_cpus = { workspace = true }
async-trait = { workspace = true }