[package]
name = "nylon-messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rmp-serde = { workspace = true }
nylon-types = { path = "../nylon-types" }

[features]
default = ["messaging"]
messaging = []
