[package]
name = "nylon-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
nylon-types = { path = "../nylon-types" }
nylon-error = { path = "../nylon-error" }
nylon-store = { path = "../nylon-store" }
nylon-sdk = { path = "../../sdk/rust" }
serde_json = { workspace = true }
serde = { workspace = true }
pingora = { workspace = true }
tracing = { workspace = true }
libloading = { workspace = true }
dashmap = { workspace = true }
flatbuffers = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }