[package]
name = "nylon-tls"
version = "0.1.0"
edition = "2024"

[dependencies]
instant-acme = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
thiserror = { workspace = true }
openssl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rcgen = { workspace = true }
nylon-types = { path = "../nylon-types" }
nylon-error = { path = "../nylon-error" }
