[package]
name = "nylon"
version = "1.0.0-beta.4"
edition = "2024"

[dependencies]
nylon-command = { path = "../nylon-command" }
nylon-config = { path = "../nylon-config" }
nylon-error = { path = "../nylon-error" }
nylon-types = { path = "../nylon-types" }
nylon-store = { path = "../nylon-store" }
nylon-plugin = { path = "../nylon-plugin" }
nylon-tls = { path = "../nylon-tls" }
nylon-sdk = { path = "../../sdk/rust" }
nylon-messaging = { path = "../nylon-messaging", optional = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
pingora = { workspace = true }
async-trait = { workspace = true }
openssl = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
flatbuffers = { workspace = true }
dashmap = { workspace = true }
mime_guess = { workspace = true }
fastrand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
futures = { workspace = true }

[features]
default = []
messaging = ["nylon-messaging", "nylon-plugin/messaging"]